--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,10 +1,22 @@
-FROM node:14.17.5
+FROM node:14.17.5 AS builder
 
 WORKDIR /usr/src/app
-COPY package*.json ./
-RUN npm install
 COPY . .
-RUN npm run build
-EXPOSE 4200
 
-CMD ng serve
+RUN npm install
+RUN npm run build
+
+FROM nginx:1.21.6
+COPY nginx.conf /etc/nginx/nginx.conf
+
+WORKDIR /usr/share/nginx/html
+COPY --from=builder /usr/src/app/dist/client/ .
+
+
+
+
+
+
+
+
+
