--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,22 @@
-version: '3.8'
-
+version: "3.9"
 services:
-  angularjs:
-    container_name: angularjs
-    hostname: angularjs
+  angular:
+    container_name: angular
+    restart: always
+    hostname: angular
     build:
       context: ./client
-      dockerfile: ./Dockerfile
+      dockerfile: Dockerfile
     ports:
-      - 4200:4200
+      - "80:80"
+  nest:
+    container_name: nest
+    hostname: nest
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    ports:
+      - "5000:5000"
     restart: always
-#  nestjs:
-#    container_name: nestjs
-#    hostname: nestjs
-#    build:
-#      context: ./server
-#      dockerfile: ./Dockerfile
-#    ports:cd
-#      - 5000:5000
-#    restart: always
+    depends_on:
+      - "angular"
